--- a/index.html
+++ b/index.html
@@ -15,26 +15,24 @@
         #canvas { position: fixed; top: 0; left: 0; pointer-events: none; z-index: 1; }
         .ui-wrapper { position: relative; z-index: 10; width: 90%; max-width: 450px; padding: 20px; }
         
-        /* Layout to prevent overlapping */
         .btn-container { 
             display: flex; justify-content: center; align-items: center; 
-            gap: 20px; margin-top: 30px; position: relative; width: 100%;
+            gap: 15px; margin-top: 30px; position: relative; width: 100%;
             min-height: 60px;
         }
 
         button {
             background: var(--gold); color: black; border: none;
-            padding: 12px 25px; border-radius: 50px; font-weight: bold;
-            cursor: pointer; font-size: 1rem; white-space: nowrap;
+            padding: 12px 20px; border-radius: 50px; font-weight: bold;
+            cursor: pointer; font-size: 0.9rem; white-space: nowrap;
             box-shadow: 0 4px 15px rgba(212, 175, 55, 0.3);
         }
 
-        #no-btn, #handak-btn { transition: all 0.1s ease; }
+        #no-btn, #handak-btn { transition: all 0.1s ease; z-index: 1001; }
 
-        /* Start Screen Overlay */
         #overlay {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            background: var(--bg); z-index: 100; display: flex;
+            background: var(--bg); z-index: 2000; display: flex;
             flex-direction: column; justify-content: center; align-items: center;
         }
 
@@ -67,7 +65,7 @@
 
     <div id="stage-2">
         <div class="kurdish-txt">Chand amnt xosh dawy?</div>
-        <img src="https://media3.giphy.com/media/v1.Y2lkPTZjMDliOTUyZDIyY2psNnkxc20wOHc0aWw4eXJpa3JkdmtqZWE5NHoydjQ4dmM4aCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/901mxGLGQN2PyCQpoc/giphy.gif" class="gif-img">
+        <img src="https://media.giphy.com/media/v1.Y2lkPTZjMDliOTU5eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4JmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1n/901mxGLGQN2PyCQpoc/giphy.gif" class="gif-img">
         <div class="btn-container">
             <button onclick="nextStage('zor')">Zor</button>
             <button onclick="nextStage('zor')">ZORRRR</button>
@@ -78,14 +76,14 @@
 
     <div id="stage-zor">
         <div class="kurdish-txt">Zor? Bas Zor? 😘</div>
-        <img src="https://media0.giphy.com/media/v1.Y2lkPTZjMDliOTUyZm01cmxpbHJiNjJtMHh5YnlzZ3JoMW14Mnp6cjJ3MmhsbXVwYWd1byZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/ytu2GUYbvhz7zShGwS/giphy.gif" class="gif-img">
+        <img src="https://media.giphy.com/media/v1.Y2lkPTZjMDliOTU5NGRyZ3B6bmx3Z3R4bmV4bmV4bmV4bmV4bmV4bmV4bmV4bmV4bmV4JmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1n/KzM1lAfJjCWEDVv37y/giphy.gif" class="gif-img">
         <div class="btn-container">
             <button onclick="nextStage('final')">GALAK ZOR!</button>
         </div>
     </div>
 
     <div id="stage-final">
-        <img src="image.png" class="gif-img" onerror="this.src='https://media.giphy.com/media/v1.Y2lkPTZjMDliOTU5bzIwaHoxeGZleXp6eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4JmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1n/L2quk2th1YfR4H9T0n/giphy.gif'">
+        <img src="https://media.giphy.com/media/v1.Y2lkPTZjMDliOTU5Ym5vN3JkYnhidzhpNXAwdGpsOW4xeHJpa3JkdmtqZWE5NHoydjQ4dmM4aCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/L2quk2th1YfR4H9T0n/giphy.gif" class="gif-img">
         <div style="font-size: 2.2rem; color: var(--gold); font-weight: bold; margin-top:15px;">Atum zor xosh dawyyyyyyy</div>
         <div style="font-size: 3rem; margin-top: 10px;">❤️💐❤️</div>
     </div>
@@ -96,17 +94,15 @@
 
     function unlockMusic() {
         document.getElementById('overlay').style.display = 'none';
-        music.play().catch(e => console.log("Music play blocked by browser"));
+        music.play().catch(e => console.log("Music error:", e));
     }
 
     function moveBtn(btn) {
-        // Teleports button to a random spot to avoid overlap/clicking
         const x = Math.random() * (window.innerWidth - btn.offsetWidth);
         const y = Math.random() * (window.innerHeight - btn.offsetHeight);
         btn.style.position = 'fixed';
         btn.style.left = x + 'px';
         btn.style.top = y + 'px';
-        btn.style.zIndex = "1000";
     }
 
     function nextStage(stageId) {
@@ -115,7 +111,6 @@
         if(stageId === 'final') startHeavyHearts();
     }
 
-    // Floating Hearts/Flowers Animation
     const canvas = document.getElementById('canvas');
     const ctx = canvas.getContext('2d');
     let particles = [];
