--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </audio>
 
 <div id="overlay">
-    <h1 style="color: var(--gold); font-size: 2.5rem;">For You ❤️</h1>
+    <h1 style="color: var(--gold); font-size: 3.5rem;">😘🤭</h1>
     <button onclick="unlockMusic()">Open Surprise 🎁</button>
 </div>
 
@@ -65,7 +65,7 @@
 
     <div id="stage-2">
         <div class="kurdish-txt">Chand amnt xosh dawy?</div>
-        <img src="https://media.giphy.com/media/v1.Y2lkPTZjMDliOTU5eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4JmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1n/901mxGLGQN2PyCQpoc/giphy.gif" class="gif-img">
+        <img src="https://media2.giphy.com/media/PFo2HrqCjC0bm/giphy.gif?cid=9b38fe912si1ru7whyig9t7hxmtxdrz7veskea77mevwtgky&ep=v1_gifs_search&rid=giphy.gif&ct=g" class="gif-img">
         <div class="btn-container">
             <button onclick="nextStage('zor')">Zor</button>
             <button onclick="nextStage('zor')">ZORRRR</button>
@@ -83,8 +83,8 @@
     </div>
 
     <div id="stage-final">
-        <img src="https://media.giphy.com/media/v1.Y2lkPTZjMDliOTU5Ym5vN3JkYnhidzhpNXAwdGpsOW4xeHJpa3JkdmtqZWE5NHoydjQ4dmM4aCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/L2quk2th1YfR4H9T0n/giphy.gif" class="gif-img">
-        <div style="font-size: 2.2rem; color: var(--gold); font-weight: bold; margin-top:15px;">Atum zor xosh dawyyyyyyy</div>
+        <img src="https://media4.giphy.com/media/IzXiddo2twMmdmU8Lv/giphy.gif?cid=9b38fe91f1rlrd3vplaw0t6lczfgv2wlq0fsx3rh3mnmp37c&ep=v1_gifs_related&rid=giphy.gif&ct=g" class="gif-img">
+        <div style="font-size: 1.8rem; color: var(--gold); font-weight: bold; margin-top:15px;">AMNISH ATUM ZOR XOSH DAWY</div>
         <div style="font-size: 3rem; margin-top: 10px;">❤️💐❤️</div>
     </div>
 </div>
@@ -94,7 +94,7 @@
 
     function unlockMusic() {
         document.getElementById('overlay').style.display = 'none';
-        music.play().catch(e => console.log("Music error:", e));
+        music.play().catch(e => console.log("Music play blocked"));
     }
 
     function moveBtn(btn) {
